# clearcode

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
clearcode/: config.py  config.yaml  main.py
clearcode/agent/: factory.py  orchestrator.py  tools.py
clearcode/cache/: semantic_cache.py
clearcode/context/indexers/: code_parser.py  factory.py  hybrid_qdrant.py  semantic_chroma.py  semantic_qdrant.py  watcher.py
clearcode/context/retrievers/: factory.py  hybrid_qdrant.py  semantic_chroma.py  semantic_qdrant.py
clearcode/llm/: factory.py
clearcode/mcp/: clearcode_mcp_client.py  clearcode_mcp_config.py  clearcode_mcp_servers.json
clearcode/memory/: session.py  short_term.py
clearcode/observability/: logger.py
clearcode/skills/: registry.py  skill_tools.py
clearcode/tasks/: approval.py  executor.py  orchestrator.py  planner.py  recovery.py  status.py  task_store.py
clearcode/tools/: filesystem_tools.py  retrieval_tools.py  terminal_tools.py
demo/: clearcode-plan.tape
