[project]
name = "clearcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Divyam Patro",email = "divyampatro1997@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.44.0,<3.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "langchain-anthropic (>=1.4.7,<2.0.0)",
    "tree-sitter (==0.21.3)",
    "tree-sitter-languages (==1.10.2)",
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "fastembed (>=0.8.0,<0.9.0)",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "langchain-mcp-adapters (>=0.3.0,<0.4.0)",
    "black (>=26.5.1,<27.0.0)"
]

[tool.poetry]
packages = [{include = "clearcode"}]


[tool.poetry.scripts]
clearcode = "clearcode.main:run"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
